--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   Hahha
   <script type='text/javascript'>
+    <script type='text/javascript'>
     (function(o,l) {
         window.oliviaChatData = window.oliviaChatData || [];
         window.oliviaChatBaseUrl = o;
@@ -18,10 +19,11 @@
         var apply = document.createElement('script');
         apply.type = 'text/javascript';
         apply.async = true;
-        apply.src = 'https://d2cxf26suf1qae.cloudfront.net/static/site/js/widget-client.js';
+        apply.src = 'http://0.0.0.0:8000/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://test.paradox.ai', 'etdhpuiihsxjmrxzcdls');
+    })('http://127.0.0.1:8080', 'kyqutgarpfyelxkzwmxq');
+</script>
 </script>
 </body>
 
